# FastAPI-The-Complete-Course

./: pyproject.toml
LM/project-1/: books.py
LM/project-2/: books.py
LM/project-3/TodoApp/: database.py  main.py  models.py  todos.db  todosapp.db
LM/project-3/TodoApp/alembic/: env.py
LM/project-3/TodoApp/alembic/versions/: 2f1470f2e2b3_create_phone_number_for_user_column.py
LM/project-3/TodoApp/routers/: admin.py  auth.py  todos.py  users.py
